# medgemma-pathology

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py  test_streamlit_app.py
docs/plans/: 2026-02-17-streamlit-app-design.md  2026-02-17-streamlit-app-plan.md
tests/: test_streamlit_app.py
