[project]
name = "medgemma-pathology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
